@@ -22,6 +22,7 @@ All:
 
 - Add wxScopedArray ctor taking the number of elements to allocate.
 - Add wxDynamicLibrary::GetModuleFromAddress() (Luca Bacci).
+- Implement wxThread::SetPriority() for pthreads (Luca Bacci).
 
 All (GUI):
 
